# ehealth-pyconnector

./: .gitignore  JavaGateway.java  LICENSE  README.md  SophiaSTSService.java  Temp.java  d9b17e46-30e6-4c90-8f81-d02e38a6321d.txt  eaacd53c-0bcf-4628-964b-67d4ba6cb263.txt  mhca-request-detail.xml  pyproject.toml
.github/workflows/: ci.yml
disable_trustchain/: CertPathCheckerPKIX.java  MANIFEST.MF
ehealth/: cli.py  exceptions.py
ehealth/addressbook/: __init__.py  address_book.py  get_professional_contact_info_response.py  search_professionals_response.py
ehealth/eagreement/: __init__.py  ask_agreement.py  async_messages.py  bundle.py  consult_agreement.py  eagreement.py  eagreement_base.py  fake.py  input_models.py
ehealth/eattestv3/: eattest.py  exceptions.py  input_models.py  send_transaction_request.py  send_transaction_response.py
ehealth/efact/: efact.py  error_constants.py  error_mappings.py  input_models.py  input_models_kine.py
ehealth/ehbox/: ehbox.py  types.py
tests/: conftest.py  test_address_book.py  test_cancel_eattest.py  test_eagreement_async_claimresponse_reason_text.py  test_eagreement_consult.py  test_eagreement_consult_validate.py  test_eagreement_fake.py  test_eagreement_messages.py  test_eagreement_scenario1.py  test_eagreement_scenario2.py  test_eagreement_scenario3.py  test_eagreement_scenario4.py  test_eagreement_sync.py  test_eagreement_weird_cases.py  test_eattest.py  test_efact.py  test_efact_messages.py  test_efact_minimal.py  test_efact_multi.py  test_ehbox.py  test_mda.py  test_mda_fake.py  test_parsing.py  test_pydantic_v2_migration.py  test_sts.py  test_therlink.py  test_unit.py  utils.py
(+74 files in other folders)
