[tool.poetry]
name = "ehealth"
version = "0.1.0"
description = ""
authors = ["Pieter Blomme <pieter.blomme@gmail.com>"]
include = [
    "JavaGateway.java", 
    "disable_trustchain/MANIFEST.MF",
    "disable_trustchain/CertPathCheckerPKIX.java",
    ]

[tool.poetry.dependencies]
python = "^3.8"
py4j = "^0.10.9"
jinja2 = "^3.1.2"
click = "^8.1.3"
pytz = "^2023.3"
unidecode = "^1.3.8"
sentry-sdk = "^2"
xsdata-pydantic = "24.5"
pydantic = "^2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ty = "^0.0.14"

[tool.poetry.scripts]
download-packages = "ehealth.cli:download_packages"
compile-bridge = "ehealth.cli:compile_bridge"
launch-bridge = "ehealth.cli:launch_bridge"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
